--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "2.2.26",
     "mongoose": "^4.9.5",
     "express": "4.15.2"
   }
